--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,10 @@ body {
   text-decoration: none;
   color: initial;
 }
+
+
+.content-category h2 {
+  text-align: center;
+  font-weight: normal;
+  font-size: 1.5em;
+}
