--- a/src/style.css
+++ b/src/style.css
@@ -20,12 +20,12 @@ body {
 }
 
 
-.menu-list h2 {
+.category-menu h2 {
   font-size: 1em;
   font-weight: normal;
 }
 
-.menu-list a {
+.category-menu a {
   text-decoration: none;
   color: initial;
 }
