--- a/src/style.css
+++ b/src/style.css
@@ -60,3 +60,18 @@ body {
   font-size: 1em;
   font-weight: normal;
 }
+
+
+/* --- category menu opener --- */
+.menu-opener {
+  display: none;
+  padding: 15px;
+  text-align: center;
+  font-size: 1em;
+}
+
+@media screen and (max-width: 650px) {
+  .menu-opener {
+    display: block;
+  }
+}
