--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,26 @@ body {
 }
 
 @media screen and (max-width: 650px) {
+  .menu-panel {
+    position: fixed;
+    width: 100%;
+    top: 0;
+  }
+
   .menu-opener {
     display: block;
   }
+
+  .category-menu {
+    display: none;
+  }
+}
+
+/* open/close category menu */
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
