Style: add bg to menu opener and menu on small screen

--- a/src/style.css
+++ b/src/style.css
@@ -79,10 +79,12 @@ body {
 
   .menu-opener {
     display: block;
+    background: white;
   }
 
   .category-menu {
     display: none;
+    background: white;
   }
 }
 
