Style: add margin top to the content to not hide first category title under the menu opener

--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,10 @@ body {
     display: none;
     background: white;
   }
+
+  .content {
+    margin-top: 30px;
+  }
 }
 
 /* open/close category menu */
