Style: link list - add space

--- a/src/style.css
+++ b/src/style.css
@@ -96,12 +96,24 @@ body {
 
 
 /* --- link list --- */
+.link-list {
+  padding-left: 10px;
+}
+
 .link-list h3 {
+  display: flex;
+  align-items: center;
   font-size: 1em;
   font-weight: normal;
 }
 
+.link-list a {
+  padding: 10px 0;
+}
+
 .link-list span {
+  flex-basis: 70px;
+  flex-shrink: 0;
   font-style: italic;;
   font-size: 0.8em;
   color: gray;
