Style: adjust flex-basis of main content elm for small screen

--- a/src/style.css
+++ b/src/style.css
@@ -43,6 +43,10 @@ body {
   .category-menu-wrapper {
     overflow: auto;
   }
+
+  .content {
+    flex-basis: 300px;
+  }
 }
 
 /* --- menu for link category selection --- */
