--- a/src/style.css
+++ b/src/style.css
@@ -162,3 +162,15 @@ body {
 .show {
   display: block;
 }
+
+/* --- loading cover --- */
+.loading-cover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: lightgray;
+  text-align: center;
+  padding-top: 200px;
+}
