--- a/src/style.css
+++ b/src/style.css
@@ -173,6 +173,7 @@ body {
   background: lightgray;
   text-align: center;
   padding-top: 200px;
+  z-index: 1000;
 }
 
 /* --- settings panel --- */
