--- a/src/style.css
+++ b/src/style.css
@@ -188,3 +188,14 @@ body {
     display: none;
   }
 }
+
+/* --- settings window --- */
+.settings-window {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: transparent;
+  z-index: 100;
+}
