--- a/src/style.css
+++ b/src/style.css
@@ -199,3 +199,43 @@ body {
   background: transparent;
   z-index: 100;
 }
+
+/* --- link creator settings --- */
+.link-creator {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  border-radius: 5px;
+  background: lightgray;
+}
+
+.link-creator form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.link-creator div {
+  flex-shrink: 0;
+  margin: 5px;
+}
+
+.link-creator div:first-child {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.link-creator input {
+  flex-grow: 1;
+}
+
+.link-creator span {
+  padding-right: 5px;
+  font-size: 0.9em;
+}
+
+.link-creator div:last-child {
+  margin-left: auto;
+}
