--- a/src/style.css
+++ b/src/style.css
@@ -196,7 +196,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: transparent;
+  background: rgba(150, 150, 150, 0.2);
   z-index: 100;
 }
 
