Create close button for new link creation panel

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -239,3 +239,13 @@ body {
 .link-creator div:last-child {
   margin-left: auto;
 }
+
+
+/* --- close button --- */
+.close-btn {
+  position: absolute;
+  top: -30px;
+  right: -20px;
+  font-size: 0.8em;
+  cursor: pointer;
+}
