--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 @import './category-menu.css';
 @import './link-list.css';
+@import './link-creator.css';
 
 * {
   box-sizing: border-box;
@@ -51,8 +52,6 @@ body {
     flex-basis: 300px;
   }
 }
-
-
 
 /* --- link category container --- */
 .link-category {
@@ -138,56 +137,6 @@ body {
   z-index: 100;
 }
 
-/* --- link creator settings --- */
-.link-creator {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 10px;
-  border-radius: 5px;
-  background: lightgray;
-}
-
-.link-creator form {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.link-creator form div {
-  display: flex;
-  align-items: center;
-  margin: 5px;
-}
-
-.link-creator form div:first-child,
-.link-creator form div:first-child + div {
-  flex-grow: 1;
-}
-
-.link-creator input {
-  flex-grow: 1;
-}
-
-.link-creator span {
-  padding-right: 5px;
-  font-size: 0.9em;
-}
-
-.link-creator form div:last-child {
-  margin-left: auto;
-}
-
-.link-creator form span {
-  display: inline-block;
-  width: 85px;
-}
-
-.link-creator form > div:nth-last-child(2) span {
-  width: unset;
-}
-
-
 /* --- settings menu --- */
 .link-creator-opener {
   display: block;
@@ -202,7 +151,6 @@ body {
   background: gray;
   color: white;
 }
-
 
 /* --- close button --- */
 .close-btn {
