--- a/src/css/link-list.css
+++ b/src/css/link-list.css
@@ -42,3 +42,13 @@
 .remove-btn {
   margin-left: 5px;
 }
+
+.visibility {
+  visibility: hidden;
+}
+
+@media screen and (max-width: 650px) {
+  .sm {
+    display: none;
+  }
+}
