--- a/src/css/link-list.css
+++ b/src/css/link-list.css
@@ -12,6 +12,10 @@
   background: #eee;
 }
 
+.link-list-item.highlight {
+  background: green;
+}
+
 .link-list h3 {
   display: flex;
   padding: 3px;
