Highlight category menu item when clicked

--- a/src/css/category-menu.css
+++ b/src/css/category-menu.css
@@ -6,6 +6,10 @@
   background: lightgray;
 }
 
+.category-menu-item.highlight {
+  background: lightgray;
+}
+
 .category-menu-header {
   font-size: 1em;
   font-weight: normal;
