--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,6 +65,16 @@ body {
   font-size: 1.5em;
 }
 
+.link-category h2 span:last-child {
+  padding-left: 10px;
+  font-size: 0.6em;
+  color: gray;
+}
+
+.link-category span select {
+  font-size: 0.9em;
+}
+
 
 /* --- category menu opener --- */
 .menu-opener {
