--- a/src/css/link-creator.css
+++ b/src/css/link-creator.css
@@ -3,14 +3,33 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 50%;
   padding: 10px;
   border-radius: 5px;
   background: lightgray;
 }
 
+.link-creator .close-btn {
+  position: absolute;
+  top: -30px;
+  right: -20px;
+  padding: 3px;
+  border-radius: 3px;
+  font-size: 0.8em;
+  background: lightgray;
+  cursor: pointer;
+}
+
+.link-creator span {
+  display: inline-block;
+  width: 90px;
+  padding-right: 5px;
+  font-size: 0.9em;
+}
+
 .link-form {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .link-form-item {
@@ -19,26 +38,12 @@
   margin: 5px;
 }
 
-.link-form-item:first-child,
-.link-form-item:first-child + .link-form-item {
-  flex-grow: 1;
-}
-
-.link-creator input {
-  flex-grow: 1;
-}
-
-.link-creator span {
-  display: inline-block;
-  width: 85px;
-  padding-right: 5px;
-  font-size: 0.9em;
-}
-
 .link-form-item:last-child {
+  margin-top: 10px;
   margin-left: auto;
 }
 
-.link-form-item:nth-last-child(2) span {
-  width: unset;
+.link-form-item input {
+  flex: 1;
+  padding: 2px;
 }
