style: create the settings menu block and its elements

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -149,12 +149,12 @@
 
 /* --- settings menu --- */
 .link-creator-opener {
-  display: block;
+  /*display: block;
   padding: 5px;
-  border-radius: 3px;
+  border-radius: 3px;*/
   background: lightgray;
-  font-size: 1.3em;
-  cursor: pointer;
+  /*font-size: 1.3em;
+  cursor: pointer;*/
 }
 
 .link-creator-opener:hover {
