--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,9 +44,9 @@
     overflow: unset;
   }*/
 
-  .category-menu-wrapper {
+  /*.category-menu-wrapper {
     overflow: auto;
-  }
+  }*/
 
   /*.content {
     flex-basis: 300px;
@@ -77,12 +77,12 @@
 
 
 /* --- category menu opener --- */
-.menu-opener {
-  /*display: none;
+/*.menu-opener {
+  display: none;
   padding: 15px;
   text-align: center;
-  font-size: 1em;*/
-}
+  font-size: 1em;
+}*/
 
 @media screen and (max-width: 650px) {
   /*.menu-panel {
