style: create the category block and related elements

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -61,10 +61,12 @@
 	overflow: auto;
 }
 
-.page__content_adaptive {
-	flex-basis: 300px;
-	margin-top: 30px;
-	overflow: unset;
+@media screen and (max-width: 650px) {
+	.page__content_adaptive {
+		flex-basis: 300px;
+		margin-top: 30px;
+		overflow: unset;
+	}
 }
 
 /* category menu opener */
