--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,7 @@
 @import './menu-panel.css';
 @import './category-menu.css';
 @import './category.css';
+@import './link-list.css';
 @import './page.css';
 
 * {
