--- a/src/css/page.css
+++ b/src/css/page.css
@@ -61,6 +61,10 @@
 	overflow: auto;
 }
 
+.page__content_hidden {
+	display: none;
+}
+
 @media screen and (max-width: 650px) {
 	.page__content_adaptive {
 		flex-basis: 300px;
@@ -74,6 +78,10 @@
 	.page__menu-opener_adaptive {
 		display: block;
 	}
+}
+
+.page__menu-opener_hidden {
+	display: none;
 }
 
 /* category menu wrapper */
@@ -90,4 +98,8 @@
 		height: 100vh;
 		padding: 0;
 	}
+}
+
+.page__category-menu_visible {
+	display: block;
 }
