--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 @import './settings-window.css';
 @import './link-window.css';
 @import './page.css';
+@import './theme.css';
 
 * {
   box-sizing: border-box;
