style: create theme link element and update relative components

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -9,3 +9,11 @@
 	background: gray;
 	color: white;
 }
+
+.theme__link:hover {
+	background: #eee;
+}
+
+.theme__link_selected {
+	background: #eee;
+}
