--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -25,3 +25,27 @@
 .theme__color-initial_mute {
 	color: gray;
 }
+
+.theme__category-menu-item_initial:hover {
+	background: lightgray;
+}
+
+.theme__category-menu-item_initial-selected {
+	background: lightgray;
+}
+
+@media screen and (max-width: 650px) {
+	.theme__category-menu-item_initial-adaptive:nth-child(even) {
+		background: #eee;
+	}
+
+	.theme__category-menu-item_initial-adaptive:nth-child(odd) {
+		background: lightgray;
+	}
+}
+
+@media screen and (max-width: 650px) {
+	.theme__menu-opener_adaptive {
+		background: white;
+	}
+}
