--- a/src/css/style.css
+++ b/src/css/style.css
@@ -84,22 +84,22 @@
   font-size: 1em;
 }*/
 
-@media screen and (max-width: 650px) {
-  /*.menu-panel {
+/*@media screen and (max-width: 650px) {
+  .menu-panel {
     position: fixed;
     width: 100%;
     top: 0;
-  }*/
+  }
 
   .menu-opener {
-    /*display: block;*/
+    display: block;
     background: white;
   }
 
-  /*.content {
+  .content {
     margin-top: 30px;
-  }*/
-}
+  }
+}*/
 
 /* open/close category menu */
 /*.hide {
