fix: make form inputs appearance identical for different browsers

--- a/src/css/link-window.css
+++ b/src/css/link-window.css
@@ -32,6 +32,12 @@
 .link-window__form-input {
 	flex: 1;
 	padding: 2px;
+	font-family: inherit;
+}
+
+.link-window__form-select {
+	padding: 2px;
+	font-family: inherit;
 }
 
 .link-window__form-item-name {
