--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 @import './link-window.css';
 @import './page.css';
 @import './theme.css';
+@import './theme-menu.css';
 
 * {
   box-sizing: border-box;
