--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,8 +6,9 @@
 @import './settings-window.css';
 @import './link-window.css';
 @import './page.css';
-@import './theme.css';
 @import './theme-menu.css';
+@import './theme/initial.css';
+
 
 * {
   box-sizing: border-box;
