--- a/src/css/link-window.css
+++ b/src/css/link-window.css
@@ -1,5 +1,5 @@
 .link-window {
-	padding: 10px;
+	padding: 15px 10px 10px 10px;
 	border-radius: 5px;
 }
 
@@ -7,7 +7,7 @@
 	position: absolute;
 	top: -30px;
 	right: -20px;
-	padding: 3px;
+	padding: 5px;
 	border-radius: 3px;
 	font-size: 0.8em;
 	cursor: pointer;
@@ -20,8 +20,8 @@
 
 .link-window__form-item {
 	display: flex;
+	margin: 5px 5px;
 	align-items: center;
-	margin: 5px;
 }
 
 .link-window__form-item_last {
@@ -31,13 +31,42 @@
 
 .link-window__form-input {
 	flex: 1;
-	padding: 2px;
+	padding: 5px;
+	border-width: 1px;
+	border-radius: 5px;
 	font-family: inherit;
 }
 
 .link-window__form-select {
-	padding: 2px;
+	position: relative;
+	width: 100%;
+	padding: 5px 20px 5px 5px;
+	border-width: 1px;
+	border-radius: 5px;
+	appearance: none;
 	font-family: inherit;
+	cursor: pointer;
+	background: transparent;
+	z-index: 1;
+}
+
+.link-window__select-arrow {
+	position: relative;
+	border-radius: 5px;
+	color: black;
+	background: #FAFAFA;
+}
+
+.link-window__select-arrow > span {
+	display: block;
+	position: absolute;
+	top: -5px;
+	right: 5px;
+	font-size: 1.5em;
+}
+
+.link-window__select-arrow > input {
+	width: 100%;
 }
 
 .link-window__form-item-name {
