Create the emerald theme

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@
 @import './theme/initial.css';
 @import './theme/carbon.css';
 @import './theme/rose.css';
+@import './theme/emerald.css';
 
 
 * {
