--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
 @import './link-list.css';
 @import './settings-window.css';
 @import './link-window.css';
+@import './content.css';
 @import './page.css';
 @import './theme-menu.css';
 @import './theme/initial.css';
