--- a/src/css/page.css
+++ b/src/css/page.css
@@ -115,3 +115,16 @@
 		display: none;
 	}
 }
+
+/* loading cover */
+.page__loading-cover {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: lightgray;
+	text-align: center;
+	padding-top: 200px;
+	z-index: 1000;
+}
