--- a/src/css/link-window.css
+++ b/src/css/link-window.css
@@ -58,11 +58,14 @@
 }
 
 .link-window__select-arrow > span {
-	display: block;
+	display: flex;
+	align-items: center;
+	height: 100%;
 	position: absolute;
-	top: -5px;
+	top: 0;
 	right: 5px;
-	font-size: 1.5em;
+	font-size: 0.8em;
+	color: gray;
 }
 
 .link-window__select-arrow > input {
