Create sapphire theme

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@
 @import './theme/carbon.css';
 @import './theme/rose.css';
 @import './theme/emerald.css';
+@import './theme/sapphire.css';
 @import './loadingCover.css';
 
 
